traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:14: error: Missing closing brace `}' assumed here
} 
^